--- a/style.css
+++ b/style.css
@@ -183,12 +183,12 @@ input[name="r"] {
     width: 100%;
     height: 100%;
 }
-@media (max-width:1200px){
-    
+@media (max-width:1000px){    
     main{
         grid-template-columns: repeat(1,1fr);  
         grid-template-rows: 55rem 55rem 30rem;
-        grid-gap: 1rem;  
+        grid-gap: 1rem; 
+        transition: all 0.4s; 
     }
     .bottom{
         display: grid;
@@ -210,9 +210,13 @@ input[name="r"] {
 @media (max-width:768px){
     html{
         font-size: 30%;
+        
+        transition: all 0.4s; 
     }
     .right{
         width: 100%;
+        
+        transition: all 0.4s; 
     }
     
 }
